--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -6,7 +6,8 @@
     "browseByTag": "Открытки по тегам",
     "browseOtherTags": "Другие теги",
     "tags": "Теги",
-    "tagsEmpty": "Теги появятся, когда будут добавлены."
+    "tagsEmpty": "Теги появятся, когда будут добавлены.",
+    "aboutMe": "Обо мне"
   },
   "header": {
     "backToFolders": "Вернуться к альбомам",
@@ -63,5 +64,21 @@
     "Meetup": "Встречные",
     "birds": "Птицы",
     "Dutch-style": "в голландском стиле"
+  },
+  "about": {
+    "title": "Обо мне",
+    "hello": {
+      "title": "Привет!",
+      "text": "Добро пожаловать в мой уголок открыток! Меня зовут Александра. Я живу в Нидерландах уже семь лет, после переезда из Москвы по работе. Люблю играть в видеоигры, учить голландский, путешествовать (привозя кучи открыток отовсюду), и проводить время с мужем и нашими двумя очаровательными папильонами. Одна из них, Шанталь, со мной на аватарке. Много лет я работала в геймдеве, но сейчас взяла паузу."
+    },
+    "wishlist": {
+      "title": "Вишлист",
+      "intro": "Что мне нравится:",
+      "items": ""
+    },
+    "contact": {
+      "title": "Связаться со мной",
+      "text": "Интересуют мои открытки? Пишите мне на форуме Postcrossing:"
+    }
   }
 }
