feat: add text to Share button in lightbox
- Add 'Share' / 'Поделиться' text next to icon
- Add lightbox translations to i18n
- Button now displays icon + text for better clarity

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -30,6 +30,10 @@
     "grid": "Grid",
     "list": "List"
   },
+  "lightbox": {
+    "share": "Share",
+    "close": "Close"
+  },
   "album": {
     "itemsCount": ["{count} postcards", "{count} postcard", "{count} postcards"]
   },
