--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -30,6 +30,10 @@
     "grid": "Крупно",
     "list": "Мелко"
   },
+  "lightbox": {
+    "share": "Поделиться",
+    "close": "Закрыть"
+  },
   "album": {
     "itemsCount": ["{count} открыток", "{count} открытка", "{count} открытки"]
   },
