Tweak about text and copy link button

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -31,7 +31,7 @@
     "list": "List"
   },
   "lightbox": {
-    "share": "Share",
+    "share": "Copy link",
     "close": "Close"
   },
   "album": {
