--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -31,7 +31,7 @@
     "list": "Мелко"
   },
   "lightbox": {
-    "share": "Поделиться",
+    "share": "Скопировать ссылку",
     "close": "Закрыть"
   },
   "album": {
