feat: hidden tags support + localization fixes
- Add tag-visibility.js for hidden tags (envelope)
- Hidden tags work via direct link but don't show in navigation
- Fix tag localization: match Cloudinary codes exactly (Birds, etc.)
- English now also localizes tags (bluecats -> Blue Cats)
- Protect against missing translations showing key paths

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -90,13 +90,13 @@
     "Meet Up Cards": "Meet-up cards"
   },
   "tags": {
-    "illustration": "Illustration",
+    "envelope": "In an envelope",
+    "illustration": "Illustrations",
     "bluecats": "Blue Cats",
     "Museum": "Museum",
     "Boomerang": "Boomerang",
-    "Free": "Free",
     "Meetup": "Meet-up",
-    "birds": "Birds",
+    "Birds": "Birds",
     "Dutch-style": "Dutch-style"
   },
   "about": {
